<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="set_on_boot"
        android:title="@string/set_on_boot" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="kcal_enabled"
        android:title="@string/kcal_enabled" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="kcal_enabled"
        android:key="grayscale"
        android:title="@string/grayscale" />

    <PreferenceCategory
        android:key="cat_colormanagement"
        android:title="@string/cat_colormanagement">

        <com.kcal.settings.preferences.CustomSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_red"
            android:max="255"
            android:title="@string/color_red" />

        <com.kcal.settings.preferences.CustomSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_green"
            android:max="255"
            android:title="@string/color_green" />

        <com.kcal.settings.preferences.CustomSeekBarPreference
            android:defaultValue="255"
            android:dependency="kcal_enabled"
            android:key="color_blue"
            android:max="255"
            android:title="@string/color_blue" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="cat_calibration"
        android:title="@string/cat_calibration">

        <com.kcal.settings.preferences.CustomSeekBarPreference
            android:defaultValue="35"
            android:dependency="kcal_enabled"
            android:key="saturation"
            android:max="158"
            android:title="@string/saturation" />

        <com.kcal.settings.preferences.CustomSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="value"
            android:max="255"
            android:title="@string/value" />

        <com.kcal.settings.preferences.CustomSeekBarPreference
            android:defaultValue="127"
            android:dependency="kcal_enabled"
            android:key="contrast"
            android:max="255"
            android:title="@string/contrast" />

        <com.kcal.settings.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:dependency="kcal_enabled"
            android:key="hue"
            android:max="1536"
            android:title="@string/hue" />

    </PreferenceCategory>
</PreferenceScreen>
